# semantics2024_sake

./: .gitignore  .gitmodules  .ignore  Cargo.toml  LICENSE  README.md  Shuttle.toml  example.Secrets.toml
assets/: index.html  viewer_fragment.html
assets/js/: pdf.mjs  pdf.worker.mjs  viewer.mjs
atomic_lib-0.37.0/: Cargo.toml
atomic_lib-0.37.0/src/: client.rs
migrations/: 0001_init.sql
pdf_api/css/: viewer.css
pdf_api/js/: atomic.worker.js  pdf.mjs  pdf.sandbox.mjs  pdf.worker.mjs  viewer.mjs
public/: index.html  viewer_fragment.html
src/: decrypter.rs  main.rs  oauth.rs
templates/: index.html  viewer_fragment.html
