[package]
name = "wiser_pdf_annotator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart", "http2", "http1"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
hyper = "1.3.1"
tower = "0.4.13"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tera = "1.19.1"
base64 = "0.22.1"
serde = { version = "1.0.201", features = ["derive"] }
chrono = "0.4.38"
pdf = "0.9.0"
serde_json = "1.0.117"
graph-rdfa-processor = "0.1.3"
sophia = {  version = "0.8.0", features = ["jsonld", "xml"] }
headers = "0.4.0"
scraper = "0.19.0"
atomic_lib = "0.37.0"
lopdf = "0.32.0"
reqwest = { version = "0.12.4", features = ["multipart"] }
